@@ -1,4 +1,12 @@
+2008-02-01  Bill Denney  <bill@denney.ws>
+
+	* time/weekday.m: Allow vector inputs and speed up.
+	* time/eomday.m: Return column vector for column vector inputs.
+
 2008-01-30  John W. Eaton  <jwe@octave.org>
+
+	* miscellaneous/edit.m: Use "## Created: DATE" instead of "initial
+	revision".
 
 	* plot/Makefile.in (SOURCES): Include __plt2sv__.m and
 	__plt2vs__.m in the list.
